--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@ margin-top: 1em;
     </script>
     <div class="container">
         <h1>DRIVER Helper</h1>
-        <h2>data version</h2>
+        <h2>What's new?</h2>
+        <p>Nothing!</p>
+        <h2>Data version</h2>
         <ul>
             <fieldset>
                 <legend>SHIFTS</legend>
@@ -215,7 +217,7 @@ margin-top: 1em;
         </section>
         <section id="copyright">
         <p>&copy; 2025 Preston Chen - <a href="https://opensource.org/license/mit">MIT license</a></p>
-        <p>Bus emoji designed by <a href="https://openmoji.org/">OpenMoji</a> - License: <a href="https://creativecommons.org/licenses/by-sa/4.0/#">CC BY-SA 4.0</a></p>
+        <p>emojis designed by <a href="https://openmoji.org/">OpenMoji</a> - License: <a href="https://creativecommons.org/licenses/by-sa/4.0/#">CC BY-SA 4.0</a></p>
     </section>
     </div>
     <script>
