--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
             </form>
         </section>
         <section id="copyright">
-            <p>© 2025 <a href="https://github.com/chenpreston" target="_blank">Preston Chen</a> - <a href="https://opensource.org/license/mit">MIT license</a></p>
+            <p>Like it?</p>
+            <a id="buy-me-a-coffee" href="https://www.buymeacoffee.com/prestonchen"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a flat white&emoji=☕&slug=prestonchen&button_colour=FFDD00&font_colour=000000&font_family=Lato&outline_colour=000000&coffee_colour=ffffff"></a>
+            <p>© 2025 <a href="https://github.com/chenpreston" target="_blank">Preston</a> - <a href="https://opensource.org/license/mit">MIT license</a></p>
             <p>Bus emoji designed by <a href="https://openmoji.org/" target="_blank">OpenMoji</a> - License: <a
                     href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></p>
                     <p>Icons designed by <a href="https://fontawesome.com/" target="_blank">Fonts Awesome</a> - License: <a
