--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <title>About page</title>
+    <style>
+        #whats-new li img {
+            margin-right: 10px;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,15 +29,28 @@
         <img src="./svgs/truck-pickup.svg" width="50">
         <div id="whats-new">
             <h2>What's new?</h2>
-            <p><img src="./svgs/driver.svg" width="25"><li>Now use Font Awesome icons as buttons in the navigation bar.</li>
-            <li>New app icon.</li></p>
-            <p><img src="./svgs/shift.svg" width="20"><li>Add descriptive text.</li>
-                <li>Move the "School Holiday" toggle switch below all buttons.</li></p>
-                <p><img src="./svgs/route.svg" width="20"><li>The route selector now supports keyword search input.</li>
-                    <li>Beautify the route playback control buttons.</li>
-                    <li>the playback position indicator on the route playback progress bar to a bus icon.</li></p>
-                    <p><img src="svgs/counting.svg" width="20"><li>Add a new feature called "Counting Helper" to record the number of school bus students.</li></p>
-                    <p><img src="./svgs/about.svg" width="20"><li>Adjust the layout of the About page.</li></p>
+            <ul>
+                <li><img src="./svgs/driver.svg" width="25">Now use Font Awesome icons as buttons in the navigation bar.</li>
+                <li>New app icon.</li>
+            </ul>
+            <ul>
+                <li><img src="./svgs/shift.svg" width="20">Add descriptive text.</li>
+                <li>Move the "School Holiday" toggle switch below all buttons.</li>
+            </ul>
+            <ul>
+                <li><img src="./svgs/route.svg" width="20">The route selector now supports keyword search input.</li>
+                <li>Beautify the route playback control buttons.</li>
+                <li>the playback position indicator on the route playback progress bar to a bus icon.</li>
+            </ul>
+            <ul>
+                <li><img src="./svgs/counting.svg" width="20">Add a new feature called "Count Helper" to record the number of school bus students.</li>
+            </ul>
+            <ul>
+                <li><img src="./svgs/coins.svg" width="20">Add a new feature called "Cash Helper" to record and save the daily fare records received by bus drivers.</li>
+            </ul>
+            <ul>
+                <li><img src="./svgs/about.svg" width="20">Adjust the layout of the About page.</li>
+            </ul>
         </div>
         <img src="./svgs/truck.svg" width="50">
         <div id="data-ver">
