--- a/index.html
+++ b/index.html
@@ -30,26 +30,33 @@
         <div id="whats-new">
             <h2>What's new?</h2>
             <ul>
-                <li><img src="./svgs/driver.svg" width="25">Now use Font Awesome icons as buttons in the navigation bar.</li>
+                <img src="./svgs/driver.svg" width="20"><img alt="GitHub Release" src="https://img.shields.io/github/v/release/chenpreston/shift-helper-pwa?style=flat&color=%23999">
+                <li>Now use Font Awesome icons as buttons in the navigation bar.</li>
                 <li>New app icon.</li>
             </ul>
             <ul>
-                <li><img src="./svgs/shift.svg" width="20">Add descriptive text.</li>
+                <img src="./svgs/shift.svg" width="20"><img alt="GitHub Release" src="https://img.shields.io/github/v/release/chenpreston/shift-helper?style=flat&color=%23999">
+                <li>Add descriptive text.</li>
                 <li>Move the "School Holiday" toggle switch below all buttons.</li>
             </ul>
             <ul>
-                <li><img src="./svgs/route.svg" width="20">The route selector now supports keyword search input.</li>
+                <img src="./svgs/route.svg" width="20"><img alt="GitHub Release" src="https://img.shields.io/github/v/release/chenpreston/route-helper?style=flat&color=%23999">
+                <li>The route selector now supports keyword search input.</li>
                 <li>Beautify the route playback control buttons.</li>
                 <li>the playback position indicator on the route playback progress bar to a bus icon.</li>
             </ul>
             <ul>
-                <li><img src="./svgs/counting.svg" width="20">Add a new feature called "Count Helper" to record the number of school bus students.</li>
+                <img src="./svgs/counting.svg" width="20"><img alt="GitHub Release" src="https://img.shields.io/github/v/release/chenpreston/counting-helper?style=flat&color=%23999">
+                <li>Add a new feature called "Count Helper" to record the number of school bus students.</li>
             </ul>
             <ul>
-                <li><img src="./svgs/coins.svg" width="20">Add a new feature called "Cash Helper" to record and save the daily fare records received by bus drivers.</li>
+                <img src="./svgs/coins.svg" width="20"><img alt="GitHub Release" src="https://img.shields.io/github/v/release/chenpreston/cash-helper?style=flat&color=%23999">
+                <li>Add a new feature called "Cash Helper" to record and save the daily fare records received by bus drivers.</li>
             </ul>
             <ul>
-                <li><img src="./svgs/about.svg" width="20">Adjust the layout of the About page.</li>
+                <img src="./svgs/about.svg" width="20"><img alt="GitHub Release" src="https://img.shields.io/github/v/release/chenpreston/about?style=flat&color=%23999">
+                <li>Adjust the layout of the About page.</li>
+                <li>Added shields.io badges to dynamically track the release versions of each feature module.</li>
             </ul>
         </div>
         <img src="./svgs/truck.svg" width="50">
