--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         gtag("config", "G-LCDE1JNW2B");
     </script>
     <div class="container">
-        <h1>DRIVER Helper</h1>
+        <h1>BusFlow</h1>
         <img src="./svgs/truck-pickup.svg" width="50">
         <div id="whats-new">
             <h2>What's new?</h2>
