--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         gtag("config", "G-LCDE1JNW2B");
     </script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="./styles.css">
     <title>About Page</title>
     <style>
