--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 <body>
     
     <div class="container">
+        <div id="BusFlow">
+            <img id="BusFlowLogo" src="./svgs/driver.svg" width="80">
         <h1>BusFlow</h1>
+    </div>
         <img src="./svgs/truck-pickup.svg" width="50">
         <div id="whats-new">
             <h2>What's new?</h2>
