--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
         <div id="whats-new">
             <h2>What's new?</h2>
             <ul>
-                <img src="./svgs/driver.svg" width="20">
+                <img id="smallBusFlowLogo" src="./svgs/driver.svg" width="20">
                 <li>Now use Font Awesome icons as buttons in the navigation bar.</li>
-                <li>New app icon.</li>
+                <li>New app icon. (Delete and reinstall BusFlow if you don't see the "BF" new icon.)</li>
+                <li>CSS now uses relative units.</li>
+<li>Adapted for devices with DPR=1. (For Hajime)</li>
+<li>Fixed the app name after PWA installation.</li>
             </ul>
             <ul>
                 <img src="./svgs/shift.svg" width="20">
@@ -64,11 +67,14 @@
             <ul>
                 <img src="./svgs/coins.svg" width="20">
                 <li>Add a new feature called "Cash Helper" to record and save the daily fare records received by bus drivers.</li>
+                <li>Modified the timing of local data loading.</li>
             </ul>
             <ul>
                 <img src="./svgs/about.svg" width="20">
                 <li>Adjust the layout of the About page.</li>
-                <li>Added shields.io badges to dynamically track the release versions of each feature module.</li>
+                <li>shields.io badges removed.</li>
+                <li>New "How to install?" Section.</li>
+                <li>Add 2 PDF files for installation guide.</li>
             </ul>
         </div>
         <img src="./svgs/truck.svg" width="50">
