--- a/index.html
+++ b/index.html
@@ -2,16 +2,6 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCDE1JNW2B"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag("js", new Date());
-        gtag("config", "G-LCDE1JNW2B");
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="./styles.css">
@@ -43,6 +33,8 @@
             <h2>What's new?</h2>
             <ul>
                 <img id="smallBusFlowLogo" src="./svgs/driver.svg" width="20">
+                <li>Removed Google Analytics codes.</li>
+                <li>Removed all update confirmation.</li>
                 <li>Now use Font Awesome icons as buttons in the navigation bar.</li>
                 <li>New app icon. (Delete and reinstall BusFlow if you don't see the "BF" new icon.)</li>
                 <li>CSS now uses relative units.</li>
