--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="whats-new">
             <h2>What's new?</h2>
             <ul>
-                <img id="smallBusFlowLogo" src="./svgs/driver.svg" width="20">
+              <!--  <img id="smallBusFlowLogo" src="./svgs/driver.svg" width="20">
                 <li>Removed Google Analytics codes.</li>
                 <li>Removed all update confirmation.</li>
                 <li>Now use Font Awesome icons as buttons in the navigation bar.</li>
@@ -40,20 +40,22 @@
                 <li>CSS now uses relative units.</li>
 <li>Adapted for devices with DPR=1. (For Hajime)</li>
 <li>Fixed the app name after PWA installation.</li>
-            </ul>
+            </ul> -->
             <ul>
                 <img src="./svgs/shift.svg" width="20">
-                <li>Add descriptive text.</li>
-                <li>Move the "School Holiday" toggle switch below all buttons.</li>
+                <p class="update-date-p">01-05-2025</p>
+                <li>The school term shift database has been updated to April 28th, 2025.</li>
             </ul>
             <ul>
                 <img src="./svgs/route.svg" width="20">
-                <li>The route selector now supports keyword search input.</li>
-                <li>Beautify the route playback control buttons.</li>
-                <li>the playback position indicator on the route playback progress bar to a bus icon.</li>
+                <p class="update-date-p">01-05-2025</p>
+                <li>Add a map layer that displays all the bus stops in the Bay of Plenty, turned off by default.</li>
+                <li>Remove the previous school bus route search bar. Now, merge it into a single search bar and add a button to clear the content within the search bar.</li>
+                <li>Now it's possible to search all Bay of Plenty bus routes.</li>
+                <li>The route database has been updated to April 28th, 2025.</li>
             </ul>
             <ul>
-                <img src="./svgs/counting.svg" width="20">
+            <!--    <img src="./svgs/counting.svg" width="20">
                 <li>Add a new feature called "Count Helper" to record the number of school bus students.</li>
             </ul>
             <ul>
@@ -68,8 +70,9 @@
                 <li>New "How to install?" Section.</li>
                 <li>Add 2 PDF files for installation guide.</li>
                 <li>Add a Comment function.</li>
-            </ul>
+            </ul> -->
         </div>
+       
         <img src="./svgs/truck.svg" width="50">
         <div id="data-ver">
         <h2>Data version</h2>
@@ -78,7 +81,7 @@
             <fieldset>
                 <legend>SHIFTS</legend>
                 <ul id="shifts-ver">
-                    <li><strong>School Term:</strong> TN_WD_Mar24e-2 (DataSet 4896)</li>
+                    <li><strong>School Term:</strong> WD_Apr25V2-78 (DataSet 4987)</li>
                     <li><strong>School Holidays:</strong> TN_SH_Mar24e-1 (DataSet 4896)</li>
                     <li><strong>Weekend:</strong> TN_WN_Mar24e-2 (DataSet 4896)</li>
                     <li>If the last part of the footer on the company's shift card differs from the version number
@@ -89,7 +92,7 @@
                 <legend>ROUTES & STOPS:</legend>
                 <ul>
                     <li><a href="https://www.baybus.co.nz/help-and-contact/general-transit-feed-specification/"
-                            target="_blank">GTFS File December 2024</a>
+                            target="_blank">GTFS File April 2025</a>
                         <<==Click this link to check the file's date on the new page. If it’s different, an update is
                             needed.</li>
                 </ul>
