--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <ul>
                 <img src="./svgs/shift.svg" width="20">
                 <p class="update-date-p">01-05-2025</p>
-                <li>The school term shift database has been updated to April 28th, 2025.</li>
+                <li>The school term weekdays and weekends shift database has been updated to April 28th, 2025.</li>
             </ul>
             <ul>
                 <img src="./svgs/route.svg" width="20">
@@ -83,7 +83,7 @@
                 <ul id="shifts-ver">
                     <li><strong>School Term:</strong> WD_Apr25V2-78 (DataSet 4987)</li>
                     <li><strong>School Holidays:</strong> TN_SH_Mar24e-1 (DataSet 4896)</li>
-                    <li><strong>Weekend:</strong> TN_WN_Mar24e-2 (DataSet 4896)</li>
+                    <li><strong>Weekend:</strong>  WN_Apr25V2x-51 (DataSet 4987)</li>
                     <li>If the last part of the footer on the company's shift card differs from the version number
                         above, the shift database needs an update.</li>
                 </ul>
