--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
         </div>
 
         <section id="copyright">
-            <p>Like it?</p>
-            <a id="buy-me-a-coffee" href="https://www.buymeacoffee.com/prestonchen" target="_blank"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a flat white&emoji=☕&slug=prestonchen&button_colour=FFDD00&font_colour=000000&font_family=Lato&outline_colour=000000&coffee_colour=ffffff"></a>
+            <!-- <p>Like it?</p> -->
             <p>© 2025 <a href="https://github.com/chenpreston" target="_blank">Preston</a> - <a href="https://opensource.org/license/mit" target="_blank">MIT license</a></p>
             <p>Bus emoji designed by <a href="https://openmoji.org/" target="_blank">OpenMoji</a> - License: <a
                     href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a></p>
