--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
             <ul>
             <!--    <img src="./svgs/counting.svg" width="20">
                 <li>Add a new feature called "Count Helper" to record the number of school bus students.</li>
-            </ul>
-            <ul>
+            </ul> -->
+            <ul> 
                 <img src="./svgs/coins.svg" width="20">
-                <li>Add a new feature called "Cash Helper" to record and save the daily fare records received by bus drivers.</li>
-                <li>Modified the timing of local data loading.</li>
+                <p class="update-date-p">10-05-2025</p>
+                <li>Other top-up amounts can be less than 5 and can be negative numbers.</li>
             </ul>
-            <ul>
+          <!--  <ul>
                 <img src="./svgs/about.svg" width="20">
                 <li>Adjust the layout of the About page.</li>
                 <li>shields.io badges removed.</li>
