--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <h2>
     How to install?
 </h2>
-<img src="./svgs/android.svg" width="20"><a href="/about/AndroidGuide.pdf" target="_blank">Android Phone</a>
-<img src="./svgs/apple.svg" width="20"><a href="/about/iPhoneGuide.pdf" target="_blank">Apple iPhone</a>
+<img src="./svgs/android.svg" width="20"><a href="/about/androidguide.pdf" target="_blank">Android Phone</a>
+<img src="./svgs/apple.svg" width="20"><a href="/about/iphoneguide.pdf" target="_blank">Apple iPhone</a>
     </div>
         <img src="./svgs/truck-pickup.svg" width="50">
         <div id="whats-new">
